helm/istio/traffic management/web-customers/customers-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customers
spec:
  host: customers.default.svc.cluster.local
  # security
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  # DISABLE/SIMPLE/MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
