helm/istio/traffic management/web-customers/customers-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customers
spec:
  hosts:
    - 'customers.default.svc.cluster.local'
  gateways:  
    - gateway
  http:
  - match:
    - headers:
        user:
          exact: debug
    route:
    - destination:
        host: customers.default.svc.cluster.local
        port:
          number: 80
        subset: v2
  - route:
    - destination:
        host: customers.default.svc.cluster.local
        port:
          number: 80
        subset: v1   
    timeout: 10s # timeout
    retries: # retries
      attempts: 10
      perTryTimeout: 2s
      retryOn: connect-failure,reset
    fault:  # fault policy
      delay:
        percentage:
          value: 50
        fixedDelay: 5s
